--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,12 @@
 flask==2.0.1
-numpy==1.21.0
-opencv-python-headless==4.5.3.56
-scikit-learn==0.24.2
-xgboost==1.4.2
-Pillow==8.3.2
-gunicorn==20.1.0 
+numpy==1.24.3
+opencv-python-headless==4.8.0.74
+scikit-learn==1.3.0
+xgboost==2.0.1
+Pillow==10.0.0
+gunicorn==21.2.0 
+matplotlib==3.7.2
+pandas==2.0.3
+seaborn==0.12.2
+scipy==1.11.1
+
