--- a/render.yaml
+++ b/render.yaml
@@ -3,8 +3,10 @@ services:
     name: hemoglobin-prediction
     env: python
     buildCommand: pip install --upgrade pip && pip install -r requirements.txt
-    startCommand: gunicorn main:app
+    startCommand: gunicorn Backend.public.HeamoScan.modelTrain.main:app
     envVars:
       - key: PYTHON_VERSION
-        value: 3.9.18 
+        value: 3.9.18
+      - key: PYTHONPATH
+        value: /opt/render/project/src
       
